# flashcardBackend

./: .env  chunk.py  db.py  flashcard.py  main.py  pipline.py  pyproject.toml  test.py
convert/: pdf2document.py
model/: FlashCard.py
routes/: card.py
